enable CTest in the project
tests are possible to run with calling 'ctest' command

Signed-off-by: Denis Pronin <dannftk@yandex.ru>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,8 @@ if (BUILD_TESTING)
         ut.cpp
     )
 
+    add_test(${PROJECT_NAME}-ut ${PROJECT_NAME}-ut)
+
     target_link_libraries(${PROJECT_NAME}-ut PRIVATE
         ${PROJECT_NAME}lib
         gtest::gtest
