make it possible to build w/o conan
Signed-off-by: Denis Pronin <dannftk@yandex.ru>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,8 @@ if (BUILD_TESTING)
 
     target_link_libraries(${PROJECT_NAME}-ut PRIVATE
         ${PROJECT_NAME}lib
-        gtest::gtest
+        GTest::gtest
+        GTest::gtest_main
     )
 endif ()
 
